--- a/index.html/pagina final.html
+++ b/index.html/pagina final.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <header>
+        <div class="resolucion">
+            <div class="desktop">
+
+            </div>
+            <div class="tablet">
+                
+            </div>
+            <div class="movil">
+                
+            </div>
+        </div>
         <div class="menu">
             <img src="imagenes/logo.png">
             <nav>
@@ -16,7 +27,7 @@
                   <li><a href="#">sobre mi</a></li>
                   <li><a href="#">servicios</a></li>
                   <li><a href="#">reseñas</a></li>
-                  <li><a href="#">seccion/registro</a></li>
+                  <li><a href="formulario.html">seccion/registro</a></li>
                 </ul>
             </nav>
     </header>
